CS59_Intellij/tests/invalid/semantics/undecliden.dsl
/* undeclared identifier */
Set list To "hi" At 1.